# twhn_api

./: .env-example  .gitignore  Cargo.toml  Dockerfile  README.md  captain-definition  deploy.sh  fly.toml  sqlx-data.json
migrations/: 20211227001412_create_item_table.sql  20220208205507_create_bookmarked_item_table.sql  20220326112747_create_list_table.sql  20220326114149_alter_item_table_with_fat_cols.sql  20220326181911_create_config_table.sql
src/: client.rs  cron.rs  hn_client.rs  main.rs  result.rs  schema.rs  store.rs  types.rs
src/db/: item.rs  mod.rs
src/domain/: comment.rs  job.rs  mod.rs  story.rs
