[package]
name = "twhn_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.7.1", features = ["full"]}
warp = "0.3.1"
async-graphql =  {version = "3.0.17", features = ["chrono"]}
async-graphql-warp = "3.0.17"
http = "0.2.4"
reqwest = {version = "0.11.3", default-features=false, features=["json", "rustls-tls"]}
futures = "0.3.15"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
anyhow = "1.0.41"
async-trait = "0.1.50"
thiserror = "1.0.25"
ammonia = "3.1.1"
chrono = {version = "0.4.19", features = ["serde"]}
chrono-humanize = "0.2.1"
# tokio + rustls
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" , "sqlite", "migrate", "macros", "uuid", "chrono", "offline"] }


[dev-dependencies]
serde_json = "1"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
